# Advanced-IDM-using-QT

./: .gitignore  CMakeLists.txt  PreferencesDialog.cpp  README.md  aboutdialog.cpp  connectionsettingsdialog.cpp  connectionsettingsdialog.h  downloadconfirmationdialog.h  downloaddetailsdialog.cpp  downloaddetailsdialog.h  downloaditem.h  downloadmanager.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newdownloaddialog.cpp  speedlimiterdialog.ui  utils.h
InternetDownloadManagerExtension/: background.js  manifest.json
src/core/: main.cpp  mainwindow.cpp  mainwindow.h
src/dialogs/: PreferencesDialog.cpp  PreferencesDialog.h  about.h  aboutdialog.cpp  connectionsettingsdialog.cpp  connectionsettingsdialog.h  downloadconfirmationdialog.cpp  downloadconfirmationdialog.h  downloaddetailsdialog.cpp  downloaddetailsdialog.h  newdownloaddialog.h  speedlimiterdialog.cpp  speedlimiterdialog.h  youtubedownloaddialog.cpp  youtubedownloaddialog.h
src/network/: downloaditem.cpp  downloaditem.h  downloadmanager.cpp  downloadmanager.h
src/utils/: utils.h
ui/: PreferencesDialog.ui  about.ui  connectionsettingsdialog.ui  downloadconfirmationdialog.ui  downloaddetailsdialog.ui  mainwindow.ui  newdownloaddialog.ui  speedlimiterdialog.ui
